--- a/zindi/readme
+++ b/zindi/readme
@@ -1,1 +1,2 @@
-hackthon,data:https://zindi.africa/competitions/alvin-smart-money-management-classification-challenge
+all hackthons participated in zindi
+
